--- a/views/course.ejs
+++ b/views/course.ejs
@@ -59,12 +59,14 @@
         var myDefaultWhiteList = $.fn.tooltip.Constructor.Default.whiteList
         myDefaultWhiteList.textarea = [];
         myDefaultWhiteList.button = [];
+        var numberofstars = 0;
 
         $stars = $('.rate-popover');
         
         $stars.on('mouseover', function () {
           var index = $(this).attr('data-index');
           markStarsAsActive(index);
+          numberofstars = index;
         });
         
         function markStarsAsActive(index) {
@@ -72,6 +74,7 @@
           for (var i = 0; i <= index; i++) {
             $($stars.get(i)).addClass('amber-text');
           }
+
         }
 
         function unmarkActive() {
@@ -80,12 +83,15 @@
         
         $stars.on('click', function () {
           $stars.popover('hide');
+          
         });
 
         // Submit, you can add some extra custom code here
         // ex. to send the information to the server
         $('#rateMe').on('click', '#voteSubmitButton',  function() {
           $stars.popover('hide');
+          console.log($(reviewformfield).val());
+          console.log(numberofstars);
         });
 
         // Cancel, just close the popover
@@ -100,7 +106,7 @@
           // Append popover to #rateMe to allow handling form inside the popover
           container: '#rateMe',
           // Custom content for popover
-          content: `<div class="my-0 py-0"> <textarea type="text" style="font-size: 0.78rem" class="md-textarea form-control py-0" placeholder="Write us what can we improve" rows="3"></textarea> <button id="voteSubmitButton" type="submit" class="btn btn-sm btn-primary">Submit!</button> <button id="closePopoverButton" class="btn btn-flat btn-sm">Close</button>  </div>`
+          content: `<div class="my-0 py-0"> <textarea type="text" style="font-size: 0.78rem" id="reviewformfield" class="md-textarea form-control py-0" placeholder="Write us what can we improve" rows="3"></textarea> <button id="voteSubmitButton" type="submit" class="btn btn-sm btn-primary">Submit!</button> <button id="closePopoverButton" class="btn btn-flat btn-sm">Close</button>  </div>`
         });
         $('.rate-popover').tooltip();
       });
