Fixed homepage link

--- a/views/course.ejs
+++ b/views/course.ejs
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar navbar-light bg-custom-2" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="#">Uni Course Review</a>
+      <a class="navbar-brand" href="/">Uni Course Review</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
