Added facebook comments widget

--- a/views/course.ejs
+++ b/views/course.ejs
@@ -18,6 +18,8 @@
     <title><%=course%>: <%=coursename%></title>
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=260206425381256&autoLogAppEvents=1"></script>
     <nav class="navbar navbar-light bg-custom-2" style="background-color: #e3f2fd;">
       <a class="navbar-brand" href="/">Uni Course Review</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -113,11 +115,11 @@
 
     </script>
 
-    
-    
-    
+    <div class="fb-comments" data-href=location.href data-numposts="5" data-width=""></div>
 
 
+
+ 
     
     <!-- Bootstrap tooltips -->
     
