--- a/views/course.ejs
+++ b/views/course.ejs
@@ -42,83 +42,21 @@
 
 
     <h1 class="coursewelcome"> Welcome to <div class="courseid"><%=course%>: <%=coursename%></div></h1>
-
-    <span id="rateMe" class="ratingstars">
-      <i class="fas fa-star py-2 px-1 rate-popover" data-index="0" data-html="true" data-toggle="popover" data-placement="top" title="Very bad"></i>
-      <i class="fas fa-star py-2 px-1 rate-popover" data-index="1" data-html="true" data-toggle="popover" data-placement="top" title="Poor"></i>
-      <i class="fas fa-star py-2 px-1 rate-popover" data-index="2" data-html="true" data-toggle="popover" data-placement="top" title="OK"></i>
-      <i class="fas fa-star py-2 px-1 rate-popover" data-index="3" data-html="true" data-toggle="popover" data-placement="top" title="Good"></i>
-      <i class="fas fa-star py-2 px-1 rate-popover" data-index="4" data-html="true" data-toggle="popover" data-placement="top" title="Excellent"></i>
-    </span>
+   
 
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <script>
-      var $stars;
+    
 
-      jQuery(document).ready(function ($) {
+    
 
-        // Custom whitelist to allow for using HTML tags in popover content
-        var myDefaultWhiteList = $.fn.tooltip.Constructor.Default.whiteList
-        myDefaultWhiteList.textarea = [];
-        myDefaultWhiteList.button = [];
-        var numberofstars = 0;
-
-        $stars = $('.rate-popover');
-        
-        $stars.on('mouseover', function () {
-          var index = $(this).attr('data-index');
-          markStarsAsActive(index);
-          numberofstars = index;
-        });
-        
-        function markStarsAsActive(index) {
-          unmarkActive();
-          for (var i = 0; i <= index; i++) {
-            $($stars.get(i)).addClass('amber-text');
-          }
-
-        }
-
-        function unmarkActive() {
-          $stars.removeClass('amber-text');
-        }
-        
-        $stars.on('click', function () {
-          $stars.popover('hide');
-          
-        });
-
-        // Submit, you can add some extra custom code here
-        // ex. to send the information to the server
-        $('#rateMe').on('click', '#voteSubmitButton',  function() {
-          $stars.popover('hide');
-          console.log($(reviewformfield).val());
-          console.log(numberofstars);
-        });
-
-        // Cancel, just close the popover
-        $('#rateMe').on('click', '#closePopoverButton', function() {
-          $stars.popover('hide');
-        });
-
-      });
-
-      $(function () {
-        $('.rate-popover').popover({
-          // Append popover to #rateMe to allow handling form inside the popover
-          container: '#rateMe',
-          // Custom content for popover
-          content: `<div class="my-0 py-0"> <textarea type="text" style="font-size: 0.78rem" id="reviewformfield" class="md-textarea form-control py-0" placeholder="Write us what can we improve" rows="3"></textarea> <button id="voteSubmitButton" type="submit" class="btn btn-sm btn-primary">Submit!</button> <button id="closePopoverButton" class="btn btn-flat btn-sm">Close</button>  </div>`
-        });
-        $('.rate-popover').tooltip();
-      });
-
-    </script>
-    <script>
-      document.write("<div class='fb-comments' data-href='" + window.location.href + "' data-numposts='5' data-order-by='reverse_time'></div>");
-    </script>
+    <div class='fb-commentbox'>
+      <script>
+        document.write("<div class='fb-comments' data-href='" + window.location.href + "' data-numposts='5' data-order-by='reverse_time'></div>");
+      </script>
+    </div>
+    
     <!-- <div class="fb-comments" data-href=location.href data-numposts="5" data-width="100%" data-order-by="reverse_time"></div> -->
 
 
@@ -133,6 +71,8 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.16.0/js/mdb.min.js"></script>
     <!-- rating.js file -->
+
+    
     
 
 
