--- a/views/course.ejs
+++ b/views/course.ejs
@@ -41,7 +41,7 @@
     </nav>
 
 
-    <h1 class="coursewelcome"> Welcome to <div class="courseid"><%=course%>: <%=coursename%></div></h1>
+    <h1 class="coursewelcome"> Welcome to <%=course%>: <div class="coursename"><%=coursename%></div></div></h1>
    
 
     <!-- JQuery -->
